--- a/app/src/main/res/layout/activity_follower_management.xml
+++ b/app/src/main/res/layout/activity_follower_management.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_padding"
@@ -46,9 +47,9 @@
     <LinearLayout
         android:id="@+id/layout_noApplicable"
         android:layout_width="match_parent"
-        android:visibility="gone"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
