--- a/app/src/main/res/layout/activity_tweet_report.xml
+++ b/app/src/main/res/layout/activity_tweet_report.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_padding"
@@ -100,6 +101,6 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:divider="@null"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:divider="@null" />
 </LinearLayout>
