--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -115,7 +115,7 @@
                     android:layout_columnWeight="1"
                     app:description="@string/TweetReportDescription"
                     app:icon="@drawable/chart_areaspline"
-                    app:ovalColor="#888888"
+                    app:ovalColor="#64b5f6"
                     app:text="@string/TweetReport" />
 
                 <com.sasarinomari.tweetcleaner.DashboardCard
@@ -126,7 +126,7 @@
                     android:layout_columnWeight="1"
                     app:description="@string/FollowerManagementDescription"
                     app:icon="@drawable/account_multiple_remove"
-                    app:ovalColor="#FFD600"
+                    app:ovalColor="#ba68c8"
                     app:text="@string/FollowerManagement" />
 
                 <com.sasarinomari.tweetcleaner.DashboardCard
@@ -137,8 +137,19 @@
                     android:layout_columnWeight="1"
                     app:description="@string/ChainblockDescription"
                     app:icon="@drawable/link_variant_remove"
-                    app:ovalColor="#FF0000"
+                    app:ovalColor="#e53935"
                     app:text="@string/Chainblock" />
+
+                <com.sasarinomari.tweetcleaner.DashboardCard
+                    android:id="@+id/button_blockClear"
+                    android:layout_width="0dp"
+                    android:layout_height="128dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    app:description="@string/BlockClearDescriptipn"
+                    app:icon="@drawable/link_variant"
+                    app:ovalColor="#ffca28"
+                    app:text="@string/BlockClear" />
             </GridLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
