--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#73c5f7</color>
     <color name="colorPrimaryDark">#5bbbf5</color>
-    <color name="colorAccent">#FFFFFF</color>
-    <color name="colorSecondary">#37FADC</color>
+    <color name="colorAccent">#37FADC</color>
+    <color name="colorSecondary">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="grey">#808080</color>
     <color name="white">#FFFFFF</color>
