트윗 청소기 보고서 기초 코드 작성

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -150,6 +150,15 @@
                     app:icon="@drawable/link_variant"
                     app:ovalColor="#ffca28"
                     app:text="@string/BlockClear" />
+
+                <Button
+                    android:id="@+id/button_gotoTest"
+                    android:layout_width="0dp"
+                    android:layout_height="128dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:text="Test">
+                </Button>
             </GridLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
