--- a/app/src/main/res/layout/item_hetzer_report.xml
+++ b/app/src/main/res/layout/item_hetzer_report.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
+    android:foreground="?attr/selectableItemBackground"
     android:orientation="vertical">
 
     <View
