--- a/app/src/main/res/layout/activity_follow_management_report.xml
+++ b/app/src/main/res/layout/activity_follow_management_report.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".hetzer.HetzerReportListActivity">
+    android:orientation="vertical"
+    tools:context=".fwmanage.FollowManagementActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,12 +19,11 @@
         android:paddingRight="@dimen/activity_horizontal_padding"
         android:paddingBottom="@dimen/activity_vertical_padding">
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/DeleteReport"
+            android:text="@string/FollowerManagement"
             android:textColor="@color/white"
             android:textSize="26sp" />
 
@@ -33,16 +32,31 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:fontFamily="@font/noto_sans_light"
-            android:text="@string/DeleteReportsDesc"
+            android:text="@string/FollowerManagementDescription"
             android:textColor="@color/white"
             android:textSize="15sp" />
 
     </LinearLayout>
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:divider="@null" />
 
+    <LinearLayout
+        android:id="@+id/layout_noApplicable"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_light"
+            android:text="@string/NoApplicableUser"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
 </LinearLayout>
