--- a/app/src/main/res/layout/activity_report_list.xml
+++ b/app/src/main/res/layout/activity_report_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".fwmanage.FollowerManagement">
+    tools:context=".report.ReportListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,44 +19,51 @@
         android:paddingRight="@dimen/activity_horizontal_padding"
         android:paddingBottom="@dimen/activity_vertical_padding">
 
+
         <TextView
+            android:id="@+id/text_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/FollowerManagement"
+            android:text="Title"
             android:textColor="@color/white"
-            android:textSize="26sp" />
+            android:textSize="26sp"
+            tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/text_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:fontFamily="@font/noto_sans_light"
-            android:text="@string/FollowerManagementDescription"
+            android:text="Description"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:ignore="HardcodedText" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_noReport"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/text_noReport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NoReports"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-    <LinearLayout
-        android:id="@+id/layout_noApplicable"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_light"
-            android:text="@string/NoApplicableUser"
-            android:textColor="@color/white" />
-
-    </LinearLayout>
 </LinearLayout>
