--- a/app/src/main/res/layout/activity_hetzer_report.xml
+++ b/app/src/main/res/layout/activity_hetzer_report.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/DeleteReport"
+            android:text="@string/TweetCleanerReport"
             android:textColor="@color/white"
             android:textSize="26sp" />
 
