--- a/app/src/main/res/layout/activity_follow_management_report.xml
+++ b/app/src/main/res/layout/activity_follow_management_report.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/FollowerManagement"
+            android:text="@string/FollowManagement"
             android:textColor="@color/white"
             android:textSize="26sp" />
 
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:fontFamily="@font/noto_sans_light"
-            android:text="@string/FollowerManagementDescription"
+            android:text="@string/FollowManagementDesc"
             android:textColor="@color/white"
             android:textSize="15sp" />
 
