경🌟RecyclerInject 클래스 작성🌟축 : 이제 정말로 레이아웃 생산성 대폭 향상될 것입니다!, Hetzer Activity, FollowManagement Activity, FollowManagement Report Activity에 우선 적용

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".DashboardActivity">
 
@@ -124,10 +125,10 @@
                     android:layout_height="128dp"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
-                    app:description="@string/FollowerManagementDescription"
+                    app:description="@string/FollowManagementDesc"
                     app:icon="@drawable/account_multiple_remove"
                     app:ovalColor="#ba68c8"
-                    app:title="@string/FollowerManagement" />
+                    app:title="@string/FollowManagement" />
 
                 <com.sasarinomari.tweeper.DashboardCardView
                     android:id="@+id/button_removeFriends"
