--- a/app/src/main/res/layout/item_default.xml
+++ b/app/src/main/res/layout/item_default.xml
@@ -22,7 +22,7 @@
         android:paddingBottom="@dimen/listitem_vertical_padding">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/defaultitem_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_light"
@@ -31,7 +31,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
-            android:id="@+id/desc"
+            android:id="@+id/defaultitem_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
