--- a/app/src/main/res/layout/fragment_no_item.xml
+++ b/app/src/main/res/layout/fragment_no_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/noitem_text"
         android:layout_width="match_parent"
         android:textAlignment="center"
+        android:layout_margin="30dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_light"
         android:text="Text"
