Report를 기록할 때 id도 기록하도록 변경, 최근 report가 위에 나오게 변경, Simplized 데이터 모델 패키지 분류 및 여러 자잘한 변경, 트윗 일지 기록 서비스를 ForegroundService화, 이에 속하는 Activity들에 RecycleInjector 적용,

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -114,10 +114,10 @@
                     android:layout_height="128dp"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
-                    app:description="@string/TweetReportDescription"
+                    app:description="@string/TweetAnalyticsDesc"
                     app:icon="@drawable/chart_areaspline"
                     app:ovalColor="#64b5f6"
-                    app:title="@string/TweetReport" />
+                    app:title="@string/TweetAnalytics" />
 
                 <com.sasarinomari.tweeper.DashboardCardView
                     android:id="@+id/button_followerManagement"
