--- a/app/src/main/res/drawable/arrow_up_bold_box.xml
+++ b/app/src/main/res/drawable/arrow_up_bold_box.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
-    android:width="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="#4CAF50" android:pathData="M19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21M12,7L7,12H10V16H14V12H17L12,7Z" />
+android:height="24dp"
+android:width="24dp"
+android:viewportWidth="24"
+android:viewportHeight="24">
+<path android:fillColor="#99ee99" android:pathData="M9.12,11.94V16.89H5.69V5.69H16.89V9.12H11.94L18.31,15.5L15.5,18.31L9.12,11.94Z" />
 </vector>
