--- a/app/src/main/res/layout/activity_report_list.xml
+++ b/app/src/main/res/layout/activity_report_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".report.ReportListActivity">
+    tools:context=".Report.ReportListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
