--- a/app/src/main/res/layout/activity_block_clear.xml
+++ b/app/src/main/res/layout/activity_block_clear.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".chainb.BlockClearActivity">
+    tools:context=".ChainBlock.BlockClearActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
