--- a/app/src/main/res/layout/activity_hetzer_conditions.xml
+++ b/app/src/main/res/layout/activity_hetzer_conditions.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".hetzer.HetzerConditionsActivity">
+    tools:context=".Hetzer.HetzerConditionsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
