--- a/app/src/main/res/layout/view_dashboard_card.xml
+++ b/app/src/main/res/layout/view_dashboard_card.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <com.sasarinomari.tweeper.OvalImageView
+        <com.sasarinomari.tweeper.View.OvalImageView
             android:id="@+id/oval"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
             android:fontFamily="@font/noto_sans_light"
             android:text="Text"
             android:textSize="12sp"
-            android:textColor="@color/grey"
+            android:textColor="@color/gray"
             app:layout_constraintBottom_toBottomOf="@id/oval"
             app:layout_constraintLeft_toRightOf="@id/oval"
             app:layout_constraintTop_toBottomOf="@id/text"
