--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -96,44 +96,32 @@
                 android:rowCount="3"
                 app:layout_constraintTop_toBottomOf="@id/image_profilePicture">
 
-
                 <com.sasarinomari.tweeper.View.DashboardCardView
                     android:id="@+id/button_erase"
                     android:layout_width="0dp"
-                    android:layout_height="128dp"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     app:description="@string/TweetCleanerDescription"
                     app:icon="@drawable/comment_remove"
-                    app:ovalColor="@color/mint"
+                    app:ovalColor="@color/sky"
                     app:title="@string/TweetCleaner" />
 
                 <com.sasarinomari.tweeper.View.DashboardCardView
                     android:id="@+id/button_tweetReport"
                     android:layout_width="0dp"
-                    android:layout_height="128dp"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     app:description="@string/TweetAnalyticsDesc"
                     app:icon="@drawable/chart_areaspline"
-                    app:ovalColor="@color/sky"
+                    app:ovalColor="@color/mint"
                     app:title="@string/TweetAnalytics" />
-
-                <com.sasarinomari.tweeper.View.DashboardCardView
-                    android:id="@+id/button_followerManagement"
-                    android:layout_width="0dp"
-                    android:layout_height="128dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    app:description="@string/FollowManagementDesc"
-                    app:icon="@drawable/account_multiple_remove"
-                    app:ovalColor="@color/purple"
-                    app:title="@string/FollowManagement" />
 
                 <com.sasarinomari.tweeper.View.DashboardCardView
                     android:id="@+id/button_removeFriends"
                     android:layout_width="0dp"
-                    android:layout_height="128dp"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     app:description="@string/ChainblockDescription"
@@ -144,19 +132,19 @@
                 <com.sasarinomari.tweeper.View.DashboardCardView
                     android:id="@+id/button_blockClear"
                     android:layout_width="0dp"
-                    android:layout_height="128dp"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     app:description="@string/BlockClearDescriptipn"
                     app:icon="@drawable/link_variant"
-                    app:ovalColor="@color/yellow"
+                    app:ovalColor="@color/purple"
                     app:title="@string/BlockClear" />
 
 
                 <com.sasarinomari.tweeper.View.DashboardCardView
                     android:id="@+id/button_gotoTest"
                     android:layout_width="0dp"
-                    android:layout_height="128dp"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     app:description="테스트 메뉴로 진입합니다"
@@ -174,5 +162,5 @@
         android:id="@+id/layout_ad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical"/>
 </LinearLayout>
