--- a/app/src/main/res/layout/item_hetzer_condition.xml
+++ b/app/src/main/res/layout/item_hetzer_condition.xml
@@ -21,7 +21,7 @@
         android:paddingBottom="@dimen/listitem_vertical_padding">
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/card_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
