solved #26 체인블록 대상으로 로그인한 계정과 팔로우쉽 형성된 계정도 삼을지 체크

--- a/app/src/main/res/layout/activity_chain_block.xml
+++ b/app/src/main/res/layout/activity_chain_block.xml
@@ -232,6 +232,31 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/layout_ignoreMyFollowing"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginTop="20dp">
+
+                        <CheckBox
+                            android:checked="true"
+                            android:buttonTint="@color/red"
+                            android:id="@+id/checkbox_ignoremyFollowing"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/noto_sans_light"
+                            android:text="@string/IgnoreMyFollowing"
+                            android:textColor="@color/black"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
