--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="sky">#64b5f6</color>
     <color name="purple">#ba68c8</color>
     <color name="red">#e53935</color>
+    <color name="yellow">#FFD600</color>
 </resources>
