--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -64,7 +64,7 @@
             <TextView
                 android:id="@+id/text_ScreenName"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/text_Name"
                 android:fontFamily="@font/noto_sans_light"
                 android:text="ScreenName"
