--- a/app/src/main/res/layout/activity_uitest.xml
+++ b/app/src/main/res/layout/activity_uitest.xml
@@ -4,14 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     tools:context=".UITestActivity">
 
     <su.levenetc.android.textsurface.TextSurface
         android:id="@+id/textSurface"
+        android:visibility="gone"
+        android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </su.levenetc.android.textsurface.TextSurface>
+
+    <ImageView
+        android:id="@+id/spotlightTarget"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@mipmap/ic_launcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
